@@ -1,3 +1,9 @@
+19990623-21:50 EDT David G. Holm <dholm@jsd-llc.com>
+  Oops! I accidentally left the HB_USE_STRICMP and HB_USE_STRCASECMP
+  stuff in these two files. It's really gone now...
+  * include/hbsetup.h
+  * source/rtl/strcmp.c
+
 19990623-21:30 EDT David G. Holm <dholm@jsd-llc.com>
   * makefile.b31
     - Added support for source/rtl/copyfile.c
